# OpenF1-Telemetry-Platform

./: .env.example  .gitignore  .prettierignore  CONTRIBUTING.md  EXPANSION_PLAN.md  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
.aiox-core/: core-config.yaml  install-manifest.yaml  version.json
.aiox-core/data/: entity-registry.yaml
.antigravity/: antigravity.json
.factory/: README.md
.factory/droids/: aiox-master.md  analyst.md  architect.md  data-engineer.md  dev.md  devops.md  pm.md  po.md  qa.md  sm.md  squad-creator.md  (+1 more)
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  test_endpoints.py
apps/api/app/: main.py
apps/api/app/core/: config.py  dependencies.py  logging.py
apps/api/app/ml/: __init__.py  fantasy_predictor.py  feature_engineer.py  pit_predictor.py  position_forecast.py  strategy_recommender.py  trainer.py  training.py
apps/api/app/models/: __init__.py  f1db.py  predictions.py  session.py  telemetry.py
apps/api/app/routers/: __init__.py  f1db.py  fantasy.py  fastf1.py  predictions.py  sessions.py  telemetry.py  weather.py  websocket.py
apps/api/app/services/: f1db_service.py  fastf1_service.py  openf1_client.py  prediction_context.py  prediction_runtime.py  prediction_service.py  telemetry_service.py  weather_service.py  websocket_manager.py
apps/api/app/utils/: cache.py  helpers.py
apps/api/tests/: test_api_integration.py  test_openf1_client_cache.py
docs/: API.md  TESTING.md
scripts/: convert_circuits.py
(+82 files in other folders)
